--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
     "author": "Manuel Espinosa",
     "license": "MIT",
     "dependencies": {
-        "express": "4.18.2",
-        "puppeteer": "21.6.0",
         "axios": "1.6.2",
-        "jsdom": "23.0.1",
         "dotenv": "16.3.1",
-        "loglevel": "1.8.1"
+        "express": "4.18.2",
+        "jsdom": "23.0.1",
+        "loglevel": "1.8.1",
+        "openai": "^4.21.0",
+        "puppeteer": "21.6.0"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2",
-        "express": "4.18.2",
-        "puppeteer": "21.6.0",
         "axios": "1.6.2",
-        "jsdom": "23.0.1",
+        "openai": "^4.21.0",
         "dotenv": "16.3.1",
-        "loglevel": "1.8.1"
+        "express": "4.18.2",
+        "jsdom": "23.0.1",
+        "loglevel": "1.8.1",
+        "nodemon": "^3.0.2",
+        "puppeteer": "21.6.0"
     },
     "bugs": {
         "url": "https://github.com/Manuel-Espinosa/puppeteer-scraper/issues"
